--- a/files/yaml_files_small/physical.yaml
+++ b/files/yaml_files_small/physical.yaml
@@ -49,23 +49,24 @@ Parameters:
         range: [115,135]
         prior_Type: flat
       mH:
-        range: [140, 2500]
+        range: [150, 1000]
         prior_Type: flat
       mA:
-        range: [140, 2500]
+        range: [30, 1000]
         prior_Type: flat
       mHp:
-        range: [140, 2500]
+        range: [30, 1000]
         prior_Type: flat
       lambda6:
         fixed_value: 0.0
       lambda7:
         fixed_value: 0.0
       m12_2:
-        range: [0, 6.4e5]
+        range: [-1e4, 1e6]
+        prior_Type: flat
       tanb:
-        range: [0.1, 100]
-        prior_Type: tanb
+        range: [0.03, 320]
+        prior_Type: flat
       sba:
         range: [0.90, 1.0]
         prior_Type: flat
@@ -157,9 +158,6 @@ Scanner:
 
 
 ObsLikes:
-
-  - purpose: LogLike
-    capability: pre_block_over_sampling
 
   #-------------------------------------#
   #      THEORETICAL LIKELIHOODS        #
@@ -423,9 +421,6 @@ ObsLikes:
   # ONLY 2020 VERSION INCLUDED
   # - purpose:    LogLike
   #   capability: B2KstarmumuAng_LogLikelihood_LHCb
-
-  - purpose: LogLike
-    capability: block_over_sampling
 
 
 #################################
@@ -691,22 +686,6 @@ Rules:
   - capability: prediction_DeltaMs
     function: SuperIso_prediction_Delta_MBs
 
-  - capability: pre_block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
-  - capability: block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
   - capability: RK_LogLikelihood_LHCb
     function: RK_LogLikelihood_LHCb
 
@@ -860,6 +839,8 @@ Logger:
 ##########################
 
 KeyValues:
+
+  print_scanID: false
 
   likelihood:
     print_invalid_points: false
