--- a/files/yaml_files_small/hybrid1.yaml
+++ b/files/yaml_files_small/hybrid1.yaml
@@ -50,14 +50,14 @@ Parameters:
           range: [115,135]
           prior_Type: flat
       mH:
-          range: [140, 2500]
-          prior_Type: flat
+          range: [150, 1e5]
+          prior_Type: log
       cba:
-          range: [-0.55, +0.55]
+          range: [-1.0, +1.0]
           prior_Type: flat
       tanb:
-          range: [0.1, 100]
-          prior_Type: tanb
+          range: [0.03, 320]
+          prior_Type: log
       Lambda4:
           range: [-4,5]
           prior_Type: flat
@@ -159,9 +159,6 @@ Scanner:
 
 
 ObsLikes:
-
-  - purpose: LogLike
-    capability: pre_block_over_sampling
 
   #-------------------------------------#
   #      THEORETICAL LIKELIHOODS        #
@@ -426,9 +423,6 @@ ObsLikes:
   # - purpose:    LogLike
   #   capability: B2KstarmumuAng_LogLikelihood_LHCb
 
-  - purpose: LogLike
-    capability: block_over_sampling
-
 
 #################################
 ##          OBSERVABLES        ##
@@ -616,6 +610,7 @@ ObsLikes:
   # #~k- capability: prediction_Bs2phimumuBr
   # #~k  purpose: Observable
 
+
   #  ---- Wilson Coefficients ----
 
   # - purpose: Observable
@@ -691,22 +686,6 @@ Rules:
 
   - capability: prediction_DeltaMs
     function: SuperIso_prediction_Delta_MBs
-
-  - capability: pre_block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
-  - capability: block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
 
   - capability: RK_LogLikelihood_LHCb
     function: RK_LogLikelihood_LHCb
@@ -861,6 +840,8 @@ Logger:
 ##########################
 
 KeyValues:
+
+  print_scanID: false
 
   likelihood:
     print_invalid_points: false
