--- a/files/yaml_files_small/hybrid1_A.yaml
+++ b/files/yaml_files_small/hybrid1_A.yaml
@@ -50,13 +50,13 @@ Parameters:
           range: [115,135]
           prior_Type: flat
       mH:
-          range: [1050, 2500]
-          prior_Type: flat
+          range: [500, 4e4]
+          prior_Type: log
       cba:
-          range: [-0.55, +0.55]
+          range: [-1.0, +1.0]
           prior_Type: flat
       tanb:
-          range: [0.1, 100]
+          range: [0.03, 0.12]
           prior_Type: log
       Lambda4:
           range: [-4,5]
@@ -65,7 +65,7 @@ Parameters:
           range: [-3,4]
           prior_Type: flat
       Lambda7:
-          range: [-2,2.5]
+          range: [-1,+1] # !!!!!
           prior_Type: flat
       lambda6:
           fixed_value: 0.0
@@ -159,9 +159,6 @@ Scanner:
 
 
 ObsLikes:
-
-  - purpose: LogLike
-    capability: pre_block_over_sampling
 
   #-------------------------------------#
   #      THEORETICAL LIKELIHOODS        #
@@ -425,9 +422,6 @@ ObsLikes:
   # ONLY 2020 VERSION INCLUDED
   # - purpose:    LogLike
   #   capability: B2KstarmumuAng_LogLikelihood_LHCb
-
-  - purpose: LogLike
-    capability: block_over_sampling
 
 
 #################################
@@ -693,22 +687,6 @@ Rules:
   - capability: prediction_DeltaMs
     function: SuperIso_prediction_Delta_MBs
 
-  - capability: pre_block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
-  - capability: block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
   - capability: RK_LogLikelihood_LHCb
     function: RK_LogLikelihood_LHCb
 
@@ -862,6 +840,8 @@ Logger:
 ##########################
 
 KeyValues:
+
+  print_scanID: false
 
   likelihood:
     print_invalid_points: false
