--- a/files/yaml_files_small/hybrid1_lowtb.yaml
+++ b/files/yaml_files_small/hybrid1_lowtb.yaml
@@ -45,31 +45,32 @@ Parameters:
       # lower limit of tanb due to perturbativity of top Yukawa coupling
       # range of m12_2 hard to justify so we use a logarithmic prior over a large region
       #      but m12_2 too low tends to cause negative masses
-      lambda1:
-          range: [0, 5]
-          prior_type: flat
-      lambda2:
-          range: [0, 6]
-          prior_type: flat
-      lambda3:
-          range: [-4, 5]
-          prior_type: flat
-      lambda4:
-          range: [-5, 5]
-          prior_type: flat
-      lambda5:
-          range: [-4, 4]
-          prior_type: flat
+
+      mh:
+          range: [115,135]
+          prior_Type: flat
+      mH:
+          range: [150, 1e5]
+          prior_Type: log
+      cba:
+          range: [-1.0, +1.0]
+          prior_Type: flat
+      tanb:
+          range: [0.03, 1.0]
+          prior_Type: log
+      Lambda4:
+          range: [-4,5]
+          prior_Type: flat
+      Lambda5:
+          range: [-3,4]
+          prior_Type: flat
+      Lambda7:
+          range: [-1.3,+1.3] # !!!!!
+          prior_Type: flat
       lambda6:
           fixed_value: 0.0
       lambda7:
           fixed_value: 0.0
-      m12_2:
-          range: [-1e3, 3.6e5]
-          prior_type: flat
-      tanb:
-          range: [0.1, 100]
-          prior_type: flat
       #~~Qin: 91.1876 # = mZ
 
 
@@ -159,19 +160,9 @@ Scanner:
 
 ObsLikes:
 
-  - purpose: LogLike
-    capability: pre_block_over_sampling
-
   #-------------------------------------#
   #      THEORETICAL LIKELIHOODS        #
   #-------------------------------------#
-
-  # prevents Higgs pole mass from going out of set range (soft-cutoff)
-  - purpose:    LogLike
-    capability: higgs_mass_LogLikelihood
-    options:
-      higgs_mass_uncertainty: 10
-      valid_range: 90
 
   # Checks that the LO or NLO scattering-matrix is unitary
   # Calculates and applies limit on eigenvalues of matrix
@@ -210,6 +201,13 @@ ObsLikes:
   #~5- purpose:    LogLike
     #~5capability: heavy_scalar_mass_corrections_LogLikelihood_THDM
 
+  # prevents Higgs pole mass from going out of set range (soft-cutoff)
+  - purpose:    LogLike
+    capability: higgs_mass_LogLikelihood
+    options:
+      higgs_mass_uncertainty: 10
+      valid_range: 40
+
   # enforces a mass range for all scalars from the yaml
   # these are specified by the run options (given below):
   # (*) maximum_scalar_mass
@@ -232,7 +230,7 @@ ObsLikes:
   # perturbativity constraint on yukawas
   #~9- purpose:    LogLike
     #~9capability: perturbativity_yukawas_LogLikelihood_THDM
-    
+
   #-------------------------------------#
   #      COLLIDER LIKELIHOODS           #
   #-------------------------------------#
@@ -424,9 +422,6 @@ ObsLikes:
   # ONLY 2020 VERSION INCLUDED
   # - purpose:    LogLike
   #   capability: B2KstarmumuAng_LogLikelihood_LHCb
-
-  - purpose: LogLike
-    capability: block_over_sampling
 
 
 #################################
@@ -692,22 +687,6 @@ Rules:
   - capability: prediction_DeltaMs
     function: SuperIso_prediction_Delta_MBs
 
-  - capability: pre_block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
-  - capability: block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
   - capability: RK_LogLikelihood_LHCb
     function: RK_LogLikelihood_LHCb
 
@@ -861,6 +840,8 @@ Logger:
 ##########################
 
 KeyValues:
+
+  print_scanID: false
 
   likelihood:
     print_invalid_points: false
