--- a/files/yaml_files_small/hybrid2_lowtb.yaml
+++ b/files/yaml_files_small/hybrid2_lowtb.yaml
@@ -49,15 +49,15 @@ Parameters:
       mh:
           range: [115,135]
           prior_Type: flat
-      mH:
-          range: [140, 2500]
-          prior_Type: flat
+      mHp:
+          range: [30, 2000]
+          prior_Type: log
       cba:
-          range: [0.02, +0.3]
+          range: [-1.0, +1.0]
           prior_Type: flat
       tanb:
-          range: [6, 70]
-          prior_Type: tanb
+          range: [0.03, 1.0]
+          prior_Type: log
       Lambda4:
           range: [-4,5]
           prior_Type: flat
@@ -65,7 +65,7 @@ Parameters:
           range: [-3,4]
           prior_Type: flat
       Lambda7:
-          range: [-2,2.5]
+          range: [-1, +1] #!!!!
           prior_Type: flat
       lambda6:
           fixed_value: 0.0
@@ -159,9 +159,6 @@ Scanner:
 
 
 ObsLikes:
-
-  - purpose: LogLike
-    capability: pre_block_over_sampling
 
   #-------------------------------------#
   #      THEORETICAL LIKELIHOODS        #
@@ -426,10 +423,6 @@ ObsLikes:
   # - purpose:    LogLike
   #   capability: B2KstarmumuAng_LogLikelihood_LHCb
 
-  - purpose: LogLike
-    capability: block_over_sampling
-
-
 #################################
 ##          OBSERVABLES        ##
 #################################
@@ -693,22 +686,6 @@ Rules:
   - capability: prediction_DeltaMs
     function: SuperIso_prediction_Delta_MBs
 
-  - capability: pre_block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
-  - capability: block_over_sampling
-    options:
-      dummy: false
-      block_lambdas: false
-      block_mhp_logtanb: false
-      block_cosba_logtanb: false
-      block_mass_splittings: false
-
   - capability: RK_LogLikelihood_LHCb
     function: RK_LogLikelihood_LHCb
 
@@ -862,6 +839,8 @@ Logger:
 ##########################
 
 KeyValues:
+
+  print_scanID: false
 
   likelihood:
     print_invalid_points: false
