--- a/files/yaml_files_full/generic.yaml
+++ b/files/yaml_files_full/generic.yaml
@@ -1,12 +1,25 @@
+
+subscans:
+  num_scans: 36
+  overlap: 1.00
+
 Parameters:
     StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
     TheModelName:
       lambda1:
           range: [0, 13]
-          prior_type: flat
+          prior_type: pow
+          power: 5
+          shift: 0
+          subscan_weight: 10
+          output_scaled_values: false
       lambda2:
           range: [0, 13]
-          prior_type: flat
+          prior_type: pow
+          power: 5
+          shift: 0
+          subscan_weight: 10
+          output_scaled_values: false
       lambda3:
           range: [-13, 13]
           prior_type: flat
