--- a/files/yaml_files_full/THDM_constraints.yaml
+++ b/files/yaml_files_full/THDM_constraints.yaml
@@ -580,6 +580,9 @@ ObsLikes:
 
 Rules:
 
+  - capability: couplingtable_THDM
+    function: get_coupling_table_using_invariant_basis
+
   - capability: basic_theory_LogLikelihood_THDM
     options:
       only_perturbativity: false
