--- a/files/yaml_files_full/genericX.yaml
+++ b/files/yaml_files_full/genericX.yaml
@@ -1,31 +1,37 @@
+
+subscans:
+  num_scans: 8
+  overlap: 0.2
+
 Parameters:
     StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
     TheModelName:
-      mh:
-          range: [100,140]
+      lambda1:
+          range: [0, 13]
           prior_type: flat
-      mH:
-          range: [3e1, 1e5]
-          prior_type: log
-      cba:
-          range: [-1.0, +1.0]
+      lambda2:
+          range: [0, 13]
           prior_type: flat
-      tanb:
-          range: [0.03, 320]
-          prior_type: log
-      Lambda4:
+      lambda3:
           range: [-13, 13]
           prior_type: flat
-      Lambda5:
+      lambda4:
           range: [-13, 13]
           prior_type: flat
-      Lambda7:
+      lambda5:
           range: [-13, 13]
           prior_type: flat
       lambda6:
           fixed_value: 0.0
       lambda7:
           fixed_value: 0.0
+      m12_2:
+          ranges: [-1e1, -1e0, 1e6, 1e10]
+          prior_type: double_log_flat_join
+      tanb:
+          range: [0.03, 320]
+          prior_type: log
+          subscan_weight: 10
       #~~Qin: 91.1876 # = mZ
 
 !import ../yaml_files/THDM_constraints.yaml
