--- a/files/yaml_files_full/test2.yaml
+++ b/files/yaml_files_full/test2.yaml
@@ -12,7 +12,7 @@ Parameters:
           prior_type: flat
       tanb:
           range: [0.03, 320]
-          prior_type: flat
+          prior_type: log
       Lambda4:
           range: [-13, 13]
           prior_type: flat
