--- a/files/yaml_files_full/generic.yaml
+++ b/files/yaml_files_full/generic.yaml
@@ -1,33 +1,26 @@
-
-subscans:
-  num_scans: 25
-  overlap: 1.00
-
 Parameters:
     StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
     TheModelName:
       lambda1:
-          range: [0, 13]
-          prior_type: pow
-          power: 5
+          range: [0, 4]
+          prior_type: flat
+          power: 3
           shift: 0
-          subscan_weight: 10
           output_scaled_values: false
       lambda2:
-          range: [0, 13]
-          prior_type: pow
-          power: 5
+          range: [0, 4]
+          prior_type: flat
+          power: 3
           shift: 0
-          subscan_weight: 10
           output_scaled_values: false
       lambda3:
-          range: [-13, 13]
+          range: [-2.5, 3]
           prior_type: flat
       lambda4:
-          range: [-13, 13]
+          range: [-3, 3]
           prior_type: flat
       lambda5:
-          range: [-13, 13]
+          range: [-1.5, 2]
           prior_type: flat
       lambda6:
           fixed_value: 0.0
@@ -37,7 +30,7 @@ Parameters:
           ranges: [-1e1, -1e0, 1e6, 1e10]
           prior_type: double_log_flat_join
       tanb:
-          range: [0.03, 320]
+          range: [0.3, 320]
           prior_type: log
       #~~Qin: 91.1876 # = mZ
 
