--- a/files/yaml_files_full/genericB.yaml
+++ b/files/yaml_files_full/genericB.yaml
@@ -1,30 +1,40 @@
+
+subscans:
+  num_scans: 49
+  overlap: 1.0
+
 Parameters:
     StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
     TheModelName:
       lambda1:
-          range: [0, 13]
+          range: [0, 4]
           prior_type: flat
       lambda2:
-          range: [0.5, 13]
+          range: [0.3, 4]
+          subscan_weight: 1
           prior_type: flat
+          power: 3
+          shift: 0
+          output_scaled_values: false
       lambda3:
-          range: [-13, 13]
+          range: [-2.5, 3]
           prior_type: flat
       lambda4:
-          range: [-13, 13]
+          range: [-3, 3]
+          subscan_weight: 1
           prior_type: flat
       lambda5:
-          range: [-13, 13]
+          range: [-1.5, 2]
           prior_type: flat
       lambda6:
           fixed_value: 0.0
       lambda7:
           fixed_value: 0.0
       m12_2:
-          ranges: [-1e1, -1e0, 1e6, 1e10]
+          ranges: [-5e4, -1e0, 1e4, 7e5]
           prior_type: double_log_flat_join
       tanb:
-          range: [0.03, 320]
+          range: [0.3, 320]
           prior_type: log
       #~~Qin: 91.1876 # = mZ
 
