--- a/files/yaml_files_full/genericD.yaml
+++ b/files/yaml_files_full/genericD.yaml
@@ -1,31 +1,38 @@
+
+subscans:
+  num_scans: 50
+  overlap: 1.0
+
 Parameters:
     StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
     TheModelName:
       lambda1:
-          range: [0, 13]
+          range: [0, 4]
           prior_type: flat
       lambda2:
-          range: [0, 13]
+          range: [0, 4]
           prior_type: flat
       lambda3:
-          range: [-13, 13]
+          range: [-2.5, 3]
           prior_type: flat
       lambda4:
-          range: [-13, 13]
+          range: [-3, 3]
           prior_type: flat
+          subscan_weight: 1
       lambda5:
-          range: [-13, 13]
+          range: [-1.5, 2]
           prior_type: flat
       lambda6:
           fixed_value: 0.0
       lambda7:
           fixed_value: 0.0
       m12_2:
-          range: [-1e3, 3.6e5]
-          prior_type: flat
+          ranges: [-1e1, -1e0, 1e6, 1e10]
+          prior_type: double_log_flat_join
       tanb:
-          range: [1.0, 100]
-          prior_type: flat
+          range: [0.3, 320]
+          prior_type: log
+          subscan_weight: 1
       #~~Qin: 91.1876 # = mZ
 
 !import ../yaml_files/THDM_constraints.yaml
