--- a/files/yaml_files_full/THDM_constraints.yaml
+++ b/files/yaml_files_full/THDM_constraints.yaml
@@ -38,6 +38,30 @@ Scanner:
 
   scanners:
   
+    postprocessor:
+      plugin: postprocessor
+      version: "1.0" # If you want to use v1 of the postprocessor, select it here (default is currently v2.0)
+      # Turn off extra log output to track what the postprocessor is doing (won't be output unless debug: true anyway though)
+      verbose_logging: false
+      # Name of the new global likelihood contribution.
+      like: LogLike
+      # Name of the combined new+old likelihood
+      reweighted_like: Comb_LogLike
+      # Add LogLike in the old output to New_LogLike in the new output.
+      add_to_like: [LogLike]
+      # Allow overwriting of the old output with the new output (e.g. if you would rather name New_LogLike as LogLike)
+      permit_discard_old_likes: true
+      update_interval: 1000 # Frequency to print status update message
+      batch_size: 100 # Number of points to distribute to worker processes each time they request more work
+       # Throw away all points outside the cuts
+      discard_points_outside_cuts: false
+      # Information about input dataset to be postprocessed
+      reader:
+        type: hdf5
+        file: "/home/alex/Desktop/data/THDM/PP_theory_19_JUL_2024_40000points.hdf5"
+        # file: "/home/alex/Desktop/data/THDM/PP_theory_19_JUL_2024_40000points.hdf5"
+        group: "/data"
+
     polychord:
       plugin: polychord
       like:  LogLike
