--- a/files/yaml_files_full/genericE.yaml
+++ b/files/yaml_files_full/genericE.yaml
@@ -1,18 +1,17 @@
+
+subscans:
+  num_scans: 50
+  overlap: 1.0
+
 Parameters:
     StandardModel_SLHA2: !import include/StandardModel_SLHA2_defaults.yaml
     TheModelName:
       lambda1:
           range: [0, 4]
           prior_type: flat
-          power: 3
-          shift: 0
-          output_scaled_values: false
       lambda2:
           range: [0, 4]
           prior_type: flat
-          power: 3
-          shift: 0
-          output_scaled_values: false
       lambda3:
           range: [-2.5, 3]
           prior_type: flat
@@ -27,11 +26,12 @@ Parameters:
       lambda7:
           fixed_value: 0.0
       m12_2:
-          ranges: [-1e4, -1e0, 1e6, 1e10]
-          prior_type: double_log_flat_join
+          range: [1e8, 1e10]
+          prior_type: flat
       tanb:
           range: [0.3, 320]
           prior_type: log
+          subscan_weight: 1
       #~~Qin: 91.1876 # = mZ
 
 !import ../yaml_files/THDM_constraints.yaml
